--- a/_includes/header_custom.html
+++ b/_includes/header_custom.html
@@ -1,2 +1,2 @@
-<a href="https://emergentworks.org"><img src="/EWLogo.png" alt="EmergentWorks Logo" title="EmergentWorks Logo"
-        width="194" height="35" /><br/>Curriculum</a>
+<a href="https://emergentworks.org"><img src="EWLogo.png" alt="EmergentWorks Logo" title="EmergentWorks Logo"
+        width="194" height="35" /></a>
