--- a/_includes/header_custom.html
+++ b/_includes/header_custom.html
@@ -1,2 +1,3 @@
-<a href="https://emergentworks.org"><img src="EWLogo.png" alt="EmergentWorks Logo" title="EmergentWorks Logo"
-        width="194" height="35" /></a>
+<a href="https://emergentworks.org">
+   <img src="EWLogo.png" alt="EmergentWorks Logo" title="EmergentWorks Logo" width="194" height="35" style="padding-top: 13px; padding-left: 10px;">
+</a>
