--- a/_includes/head_custom.html
+++ b/_includes/head_custom.html
@@ -1,1 +1,2 @@
 <link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/assets/images/favicon.png">
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/ew-curriculum.css">
