--- a/_includes/footer_custom.html
+++ b/_includes/footer_custom.html
@@ -1,3 +1,5 @@
+<p>site = {{site}}</p>
+<p>site.repository = {{site.repository}}</p>
 <p>site.repository = {{site.repository}}</p>
 <p>site.gh_edit_repository = {{site.gh_edit_repository}}</p>
 {% if site.repository %}
