--- a/assets/css/ew-curriculum.css
+++ b/assets/css/ew-curriculum.css
@@ -1,4 +1,4 @@
-a[target="_blank"]:after {
+a[target="_blank"]::after {
   background-color: rgb(114, 83, 237);
   content: "";
   display: inline-flex;
@@ -9,4 +9,8 @@ a[target="_blank"]:after {
   -webkit-mask-size: cover;
   mask-size: cover;
   width: 10px;
+}
+
+.main-header > a[target="_blank"]::after {
+  display: none;
 }
